--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ svg {
     }
 
     .nav-links {
-        position: absolute;
+        position: fixed;
         background: #f44336;
         height: 100vh;
         width: 200px;
@@ -495,4 +495,76 @@ h3 {
     color: #0f0f0f;
     padding: 8px;
     box-sizing: border-box;
+}
+
+
+/*---------------contact us form styling--------------*/
+
+/*location map */
+.location {
+    width: 80%;
+    margin: auto;
+    padding: 80px 0;
+}
+
+.location iframe {
+    width: 100%;
+    padding-bottom: 0;
+}
+
+.contact-us {
+    width: 80%;
+    margin: auto;
+}
+
+.contact-col {
+    flex-basis: 48%;
+    margin-bottom: 30px;
+}
+
+.contact-col div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.contact-col div .fa-solid {
+    font-size: 25px;
+    color: #f44336;
+    margin: 5px;
+    margin-right: 30px;
+}
+
+.contact-col div p {
+    padding: 0;
+}
+
+.contact-col div h5 {
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: #0f0f0f;
+    font-weight: 400;
+}
+
+/*styling the form*/
+.contact-col input,
+.contact-col textarea {
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    border: 1px solid #0f0f0f;
+    box-sizing: border-box;
+}
+
+/*styling ig,fb whatassp icons*/
+.footer .fa-brands {
+    font-size: 25px;
+    color: #f44336;
+    margin: 5px;
+    margin-right: 30px;
+}
+
+.footer .fa-solid {
+    color: #f44336;
 }
